fix horiz. scrollbar issue

--- a/public/css/gollum.css
+++ b/public/css/gollum.css
@@ -65,7 +65,6 @@ a:hover, a:visited {
   /* @section body */
   #wiki-body {
     display: block;
-    margin-right: 3%;
     width: 100%;
   }
 
